adicionando campanha em destaque, removendo opação de inicio e arruamndo a estilização dos inputs de cadastro

--- a/app/assets/stylesheets/frontend/application.sass
+++ b/app/assets/stylesheets/frontend/application.sass
@@ -17,12 +17,14 @@
 
 //Pages
 
-@import "./pages/login"
 @import "./pages/home"
+@import "./pages/login"
 @import "./pages/pix"
 @import "./layout"
 
-
+.sorteio-column
+    display: flex
+    justify-content: center
 
 .my-lotteries-container
     display: flex
