--- a/app/assets/stylesheets/frontend/pages/login.sass
+++ b/app/assets/stylesheets/frontend/pages/login.sass
@@ -17,6 +17,7 @@
     flex-direction: column
     justify-content: center
     align-items: center
+    margin-bottom: 30px
     h3
         font-weight: bold
         color: black
@@ -36,6 +37,7 @@
     border-radius: 8px
     padding: 10px
     padding-left: 30px
+    box-shadow: 0 0 3px
 
 .logo-cash
     position: absolute
