--- a/app/assets/stylesheets/frontend/pages/home.sass
+++ b/app/assets/stylesheets/frontend/pages/home.sass
@@ -177,6 +177,12 @@
         text-align: center
         color: white
 
+.sorteio-destaque
+    flex-direction: column
+    img
+        border-radius: 10px 10px 0px 0px
+        width: 100%
+
 .sorteio-img
     border-radius: 10px 0px 0px 10px
     width: 150px
@@ -201,6 +207,12 @@
     display: flex
     justify-content: center
     flex-wrap: wrap
+    flex-direction: column
+    align-items: center
+    > .icon-box
+        margin-bottom: 30px
+        i
+            font-size: 18pt
     
 .button-group
     display: flex
@@ -228,7 +240,7 @@
     background-color: white
     box-shadow: 0 0 2px
     border-radius: 10px
-    width: 100%
+    width: 320px
     margin: 0 0 30px 0px
     display: flex
     .sorteio-content
@@ -264,6 +276,10 @@
     gap: 5px
     i
         color: black
+    h3
+        font-weight: bold
+        color: black
+        margin: 0
 
 .nav-container
     display: flex
