--- a/app/views/layouts/frontend.html.slim
+++ b/app/views/layouts/frontend.html.slim
@@ -45,10 +45,10 @@ html lang="pt-BR"
                 = flash[:notice]
         aside.aside
             .nav-container
+                / a.nav-item-box href="/"
+                /     =icon('fas', 'home')
+                /     span Inicio 
                 a.nav-item-box href="/"
-                    =icon('fas', 'home')
-                    span Inicio 
-                a.nav-item-box href="/campanhas"
                     =icon('fas', 'newspaper')
                     span Campanhas 
                 a.nav-item-box href=""
