adicioando olho de ocutação de dados, ocutação de dados nos comprovantes, adicação das imagens das campanhas

--- a/app/views/admin/members/_form.html.slim
+++ b/app/views/admin/members/_form.html.slim
@@ -7,7 +7,6 @@ h2 Clientes
       = f.input :name, :label => 'Nome'
       = f.input :email, :label => 'E-mail'    
       = f.input :phone, :label => 'Telefone'
-      = f.input :password, :label => 'Senha'
-      = f.input :password_confirmation, :label => 'Repita a Senha'
+      = f.input :cpf, :label => 'CPF'
 
   = render 'admin/shared/form_actions', f: f
