--- a/app/views/admin/shared/_create.html.slim
+++ b/app/views/admin/shared/_create.html.slim
@@ -2,4 +2,4 @@
 .clearfix
 
 .text-center
-  = will_paginate(collection, renderer: 'ApplicationHelper::LinkRenderer', class: 'pagination pagination-lg')
+  = will_paginate(collection, renderer: 'ApplicationHelper::LinkRenderer', class: 'pagination pagination-lg', per_page: 5) 
