--- a/app/assets/stylesheets/admin/application.sass
+++ b/app/assets/stylesheets/admin/application.sass
@@ -16,3 +16,25 @@
 @import "./home.sass"
 @import "./layout.sass"
 @import "./login.sass"
+
+
+.olhoPhone 
+    cursor: pointer
+.olhoCpf
+    cursor: pointer
+.olhoEmail
+    cursor: pointer
+
+.button-search-member
+    display: flex
+    justify-content: center
+    align-items: center
+    gap: 10px
+    margin-top: 10px
+
+.search-lotteries-container
+    display: flex
+    align-items: end
+    gap: 20px
+    flex-wrap: wrap
+    justify-content: center
