--- a/app/views/admin/payments/index.html.slim
+++ b/app/views/admin/payments/index.html.slim
@@ -2,17 +2,18 @@ h2 Pagamentos
 .panel.panel-default
   .panel-body
     = simple_form_for :search, url: search_admin_payments_path, html: {class: 'search-form'}, method: :get do |f|
-      .row
-        .col-md-3
+      .search-lotteries-container
+        .search-lotteries-box  
           = f.label :lottery_id, label: 'Campanha', required: false
           = f.collection_select :lottery_id, Lottery.all, :id, :event, { prompt: 'Todas as campanhas' }, { class: 'col-md-12 form-control' }
-        .col-md-3
+        .search-lotteries-box 
           = f.label :member_id, label: 'Cliente', required: false
           = f.collection_select :member_id, Member.all, :id, :name, { prompt: 'Todos os clientes' }, { class: 'col-md-12 form-control' }
-        .col-md-1.mt-25
+        .button-search-member
           = f.submit 'Buscar', class: 'btn btn-primary'
-        .col-md-1.mt-25
           = link_to 'Limpar Busca', '', class: 'btn btn-warning'
+
+          
 .panel.panel-default
   .table-responsive
     table.table.table-striped.b-t.b-light
@@ -31,5 +32,8 @@ h2 Pagamentos
             td.text-center = r.quantity
             td.text-center = Member.find(r.member_id).name
             td.text-center = r.created_at.strftime("%d/%m/%Y %H:%M")
-= render 'admin/shared/create'
+
+.text-center
+  = will_paginate(collection, renderer: 'ApplicationHelper::LinkRenderer', class: 'pagination pagination-lg')
+
 /= link_to "Voltar", admin_payments_path, class: 'btn btn-s-md btn-danger mr-10'
