--- a/app/views/frontend/public/numbers.html.slim
+++ b/app/views/frontend/public/numbers.html.slim
@@ -13,10 +13,10 @@
             |  #{@member.name}
         li
             strong CPF:
-            |  #{@member.cpf}
+            |  #{@member.cpf[0..2] + '.***.***-**'}
         li
             strong Telefone:
-            |  #{@member.phone}
+            |  #{@member.phone[0..3] + '*****-' + @member.phone[10..13]}
         li
             strong Email:
             |  #{@member.email}
