--- a/app/views/frontend/public/events.html.slim
+++ b/app/views/frontend/public/events.html.slim
@@ -15,7 +15,8 @@ section#agreement
                     h3 Em Destaque
                 .sorteio-column.col-xs-12.col-md-6.col-lg-6   
                     = link_to new_purchase_path(id: Lottery.where(status: true).last.id), class: 'sorteio-box sorteio-destaque' do
-                        = image_tag Lottery.where(status: true).last.image_url, class: 'sorteio-img'
+                        - if Lottery.where(status: true).last.image_url.present?
+                            = image_tag Lottery.where(status: true).last.image_url, class: 'sorteio-img'
                         .sorteio-content 
                             h2 = Lottery.where(status: true).last.event
                             p Venha participar do sorteio dessa linda moto
@@ -42,7 +43,8 @@ section#agreement
                                             p Cotas esgotadas                         
                             - else
                                 = link_to new_purchase_path(id: lottery.id), class: 'sorteio-box' do
-                                    = image_tag lottery.image_url, class: 'sorteio-img'
+                                    - if lottery.image_url.present?
+                                        = image_tag lottery.image_url, class: 'sorteio-img'
                                     .sorteio-content 
                                         h2 = lottery.event 
                                         p Venha participar do sorteio dessa linda moto
