--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -61,6 +61,10 @@ html lang="pt-BR"
               = nav_link_to admin_analytics_path, {:class => 'menu_link'}, {:wrapper => 'li', :wrapper_class => 'nav-item-box', :selected_class => 'active', :url_segment => 2 } do
                 = icon('fab', 'google')
                 span Analytics
+            - if can? :read, Message
+              = nav_link_to admin_messages_path, {:class => 'menu_link'}, {:wrapper => 'li', :wrapper_class => 'nav-item-box', :selected_class => 'active', :url_segment => 2 }
+                = icon('fas', 'wallet')
+                span Comunicados
             - if can? :read, User
               = nav_link_to admin_users_path, {:class => 'menu_link'}, {:wrapper => 'li', :wrapper_class => 'nav-item-box', :selected_class => 'active', :url_segment => 2 }
                 = icon('far', 'user')
