--- a/app/views/layouts/frontend.html.slim
+++ b/app/views/layouts/frontend.html.slim
@@ -5,7 +5,7 @@ html lang="pt-BR"
     meta name="robots" content="noindex"
     meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"
     meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"
-    title = 'Cash Premium 1.0'
+    title = 'Cash Prêmio 1.0'
 
     = stylesheet_link_tag "frontend/application", media: "all"
     = javascript_include_tag "frontend/application"
@@ -51,7 +51,7 @@ html lang="pt-BR"
                 a.nav-item-box href="/"
                     =icon('fas', 'newspaper')
                     span Campanhas 
-                a.nav-item-box href=""
+                a.nav-item-box href="/comunicados"
                     =icon('fas', 'list-alt')
                     span Comunicados 
                 button#openModalNumber.nav-item-box type="button"
@@ -60,7 +60,7 @@ html lang="pt-BR"
                 a.nav-item-box href="/criar-conta"
                     =icon('fas', 'address-card')
                     span Cadastro 
-                a.nav-item-box href=""
+                a.nav-item-box href="/ganhadores"
                     =icon('fas', 'trophy')
                     span Ganhadores 
                 a.nav-item-box href=""
