paginação e mudança de estilos nas paginas

--- a/app/assets/stylesheets/admin/application.sass
+++ b/app/assets/stylesheets/admin/application.sass
@@ -17,6 +17,13 @@
 @import "./layout.sass"
 @import "./login.sass"
 
+.pagination 
+    li > a
+        color: black
+
+.pagination > .active > .active
+    background-color: #17a700
+    border-color: #17a700
 
 .olhoPhone 
     cursor: pointer
