--- a/app/assets/stylesheets/frontend/application.sass
+++ b/app/assets/stylesheets/frontend/application.sass
@@ -23,6 +23,43 @@
 @import "./layout"
 @import "./pages/home"
 
+.sorteio-content-winner
+    width: 100%
+    padding: 10px
+    display: flex
+    justify-content: center
+    align-items: start
+    flex-direction: column
+    p
+        margin: 0
+
+.messages-container
+    display: flex
+    justify-content: center
+    align-items: center
+    flex-direction: column
+    text-align: center
+    .messages-box
+        max-width: 500px
+        margin: 20px
+        display: flex
+        flex-direction: column
+        justify-content: center
+        align-items: center
+        border-radius: 10px
+        padding: 10px
+        box-shadow: 0 0 5px
+    h4
+        color: black
+
+.pagination 
+    li > a
+        color: black
+
+.pagination > .active > .active  
+    background-color: #17a700
+    border-color: #17a700
+
 .sorteio-column
     display: flex
     justify-content: center
@@ -38,11 +75,11 @@
         justify-content: center
         flex-direction: column
         align-items: center
-        box-shadow: 0 0 2px
         border-radius: 10px
         padding: 20px
         width: 350px
         margin-bottom: 30px
+        box-shadow: 0 0 2px
         p
             margin: 0
         h3
