--- a/app/assets/stylesheets/frontend/pages/home.sass
+++ b/app/assets/stylesheets/frontend/pages/home.sass
@@ -182,11 +182,13 @@
     img
         border-radius: 10px 10px 0px 0px
         width: 100%
+        height: 220px
 
 .sorteio-img
     border-radius: 10px 0px 0px 10px
     width: 150px
     object-fit: cover
+    height: 150px
 
 .dropdown-menu
     min-width: 0
@@ -425,6 +427,10 @@
         margin: 0
     p
         margin: 0
+    img
+        width: 300px
+        border-radius: 10px
+        margin-bottom: 30px
 
 .disponible
     display: flex
