algumas alterações bestas

--- a/app/assets/stylesheets/frontend/application.sass
+++ b/app/assets/stylesheets/frontend/application.sass
@@ -32,6 +32,8 @@
     flex-direction: column
     p
         margin: 0
+        text-align: center
+        width: 100%
 
 .messages-container
     display: flex
