construção dos termos de utilização

--- a/app/views/layouts/frontend.html.slim
+++ b/app/views/layouts/frontend.html.slim
@@ -63,7 +63,7 @@ html lang="pt-BR"
                 a.nav-item-box href="/ganhadores"
                     =icon('fas', 'trophy')
                     span Ganhadores 
-                a.nav-item-box href=""
+                a.nav-item-box href="/termo"
                     =icon('fas', 'vote-yea')
                     span Termos de Uso 
                 a.nav-item-box
