alteração na pagina de termo de uso e mudança no modal de telefone

--- a/app/assets/stylesheets/frontend/application.sass
+++ b/app/assets/stylesheets/frontend/application.sass
@@ -23,6 +23,23 @@
 @import "./layout"
 @import "./pages/home"
 
+.termo 
+    margin: 30px
+    color: black
+    h3
+        font-size: 14pt
+        text-align: center
+        
+
+
+        
+.alert-warning
+    padding: 10px
+    border-radius: 10px
+    display: flex
+    margin-top: 20px
+    gap: 20px
+
 .sorteio-content-winner
     width: 100%
     padding: 10px
@@ -34,6 +51,7 @@
         margin: 0
         text-align: center
         width: 100%
+
 
 .messages-container
     display: flex
@@ -53,6 +71,8 @@
         box-shadow: 0 0 5px
     h4
         color: black
+        font-size: 12pt
+        margin: 10px
 
 .pagination 
     li > a
