--- a/app/views/frontend/public/term.html.slim
+++ b/app/views/frontend/public/term.html.slim
@@ -1,6 +1,9 @@
-.termo
-    h1 Termo de utilização
+.home-title 
+  div
+    h1 Termos de uso
+  p Leia com Atenção!
 
+.termo
     ol 
         li O cpf do cliente será apenas utilizado para recuperar ou alterar telefone cadastrado em caso de perda ou esquecimento.
         li O processo de recuperação será feita através de comunicação entre suporte técnico do cash prêmios e o cliente que irá utilizar o cpf para comprovar veracidade.
