--- a/app/views/frontend/public/winners.html.slim
+++ b/app/views/frontend/public/winners.html.slim
@@ -24,8 +24,5 @@ section#agreement
                                     
                 - else 
                     .sorteio-container
-                        .sorteio-column 
-                            .sorteio-box 
-                                .sorteio-content-winner
-                                    p Por enquanto não há vencedores !       
+                        h3 Por enquanto não há vencedores !       
                 
