--- a/app/views/layouts/frontend.html.slim
+++ b/app/views/layouts/frontend.html.slim
@@ -85,7 +85,9 @@ html lang="pt-BR"
                             span.close &times;
                             
                             .sorteio-actions
-                                p Informe seu numero de telefone
+                                .alert-warning role="alert"
+                                    p = icon('fas', 'exclamation-circle') + ' Informe seu número de telefone para continuar'
+                                = form.label :phone, "Número de Telefone: "
                                 = form.text_field :phone, id: 'phone-field-number', class: 'new-sorteio-input-number'
                                 .buttons-sorteio
                                 = form.button "Confirmar", class: 'new-sorteio-submit' 
