--- a/app/assets/stylesheets/frontend/pages/home.sass
+++ b/app/assets/stylesheets/frontend/pages/home.sass
@@ -24,14 +24,15 @@
     justify-content: center
     .sorteio-actions
         flex-direction: column
-        padding: 30px
+        padding: 20px
         display: flex
-        align-items: center
         input    
             border: none
             box-shadow: 0 0 5px
             border-radius: 10px
             padding: 5px
+        label
+            font-size: 11pt
   
 
 
@@ -216,6 +217,10 @@
         margin-bottom: 30px
         i
             font-size: 18pt
+    h3
+        color: black
+        font-size: 12pt
+        margin: 10px
     
 .button-group
     display: flex
