correcao modal campanhas

--- a/app/views/frontend/public/purchase.html.slim
+++ b/app/views/frontend/public/purchase.html.slim
@@ -47,8 +47,7 @@
                             .alert-warning role="alert"
                                 p = icon('fas', 'exclamation-circle') + ' Informe seu número de telefone para continuar'
                             = form.label :phone, "Número de Telefone: "
-                            = form.text_field :phone, id: 'phone-field-number', class: 'new-sorteio-input-number'
-                            .buttons-sorteio
+                            = form.text_field :phone, id: 'phone-field', class: 'new-sorteio-input-number'
                             = form.button "Confirmar", class: 'new-sorteio-submit' 
   
 
