--- a/app/views/frontend/public/term.html.slim
+++ b/app/views/frontend/public/term.html.slim
@@ -16,4 +16,4 @@
         li A consulta dos números adquiridos será antecedida por atenticação por número de telefone.
         li Todos os vencedores de todas as campanhas serão divulgados na lista de ganhadores presentes nesta página.
         li A participação nos sorteios é de livre e espontânea vontade, portanto não será permitido desistência após realização de pagamento.
-        li O estorno só será possível na hipótese em que ao finalizar a compra o sistema responder que os números foram esgotados, nessa situação o suporte será notificado imediatamente pelo sistema e o cliente receberá de volta o dinheiro no prazo máximo de trinta minutos. 
+        /li O estorno só será possível na hipótese em que ao finalizar a compra o sistema responder que os números foram esgotados, nessa situação o suporte será notificado imediatamente pelo sistema e o cliente receberá de volta o dinheiro no prazo máximo de trinta minutos. 
