--- a/app/views/frontend/public/winners.html.slim
+++ b/app/views/frontend/public/winners.html.slim
@@ -19,7 +19,7 @@ section#agreement
                                         = image_tag winner.image_url, class: 'sorteio-img'
                                     .sorteio-content-winner
                                         h2 = winner.winner
-                                        p = 'Número da Sorte: ' + winner.id.to_s
+                                        p = 'Números adquiridos: ' + Member.find_by(name: winner.winner).tickets[winner.id.to_s].to_s
                                         p = 'Prêmio: ' + winner.event 
                                     
                 - else 
