--- a/app/views/admin/payments/index.html.slim
+++ b/app/views/admin/payments/index.html.slim
@@ -25,7 +25,7 @@ h2 Pagamentos
           th.text-center Cliente
           th.text-center Data e Horário
       tbody
-        - @payments.order(created_at: :asc).each do |r|
+        - @collection.order(created_at: :asc).each do |r|
           tr
             td.text-center = r.transaction_id
             td.text-center = Lottery.find(r.lottery_id).event
@@ -34,6 +34,6 @@ h2 Pagamentos
             td.text-center = r.created_at.strftime("%d/%m/%Y %H:%M")
 
 .text-center
-  = will_paginate @payments, renderer: ApplicationHelper::LinkRenderer, class: 'pagination pagination-lg'
+  = will_paginate @collection, renderer: ApplicationHelper::LinkRenderer, class: 'pagination pagination-lg'
 
 /= link_to "Voltar", admin_payments_path, class: 'btn btn-s-md btn-danger mr-10'
