--- a/app/views/frontend/registrations/new.html.slim
+++ b/app/views/frontend/registrations/new.html.slim
@@ -35,6 +35,6 @@
       br/
 
       .button-container
-        .recaptcha = recaptcha_tags
+        /.recaptcha = recaptcha_tags
         = f.button :submit, "Enviar", class: 'button-register'
         = link_to "Voltar", "/", class: 'button-register'
