--- a/app/views/frontend/registrations/new_member_payment.html.slim
+++ b/app/views/frontend/registrations/new_member_payment.html.slim
@@ -34,6 +34,6 @@
       br/
 
       .button-container
-        .recaptcha = recaptcha_tags
+        /.recaptcha = recaptcha_tags
         = f.button :submit, "Enviar", class: 'button-register'
         = link_to "Voltar", "/", class: 'button-register'
