--- a/app/views/layouts/frontend.html.slim
+++ b/app/views/layouts/frontend.html.slim
@@ -66,7 +66,7 @@ html lang="pt-BR"
                 a.nav-item-box href="/termo"
                     =icon('fas', 'vote-yea')
                     span Termos de Uso 
-                a.nav-item-box
+                a.nav-item-box href="https://wa.me/5579996613823" target="_blank"
                     =icon('fas', 'envelope')
                     span Entrar em Contato  
                 /.actions-user  
