consertando overflow da compra concluida ocultando email colocando a descricao do evento

--- a/app/assets/stylesheets/frontend/application.sass
+++ b/app/assets/stylesheets/frontend/application.sass
@@ -203,9 +203,13 @@
 .my-numbers-container
     display: flex
     justify-content: center
-    align-items: start
-    gap: 30px
     flex-wrap: wrap
+    border-radius: 10px
+    padding-top: 20px
+    box-shadow: 0 0 2px
+    margin-bottom: 30px
+    flex-direction: column
+    align-items: center
     .my-numbers-box
         display: flex
         justify-content: center
@@ -225,6 +229,11 @@
             gap: 10px
             margin-top: 10px
             margin-bottom: 20px
+            overflow-x: auto
+            height: 180px
+            justify-content: center
+            flex-wrap: wrap
+            padding: 10px
         li
             background: #17a700 
             padding: 5px    
