--- a/app/views/frontend/public/numbers.html.slim
+++ b/app/views/frontend/public/numbers.html.slim
@@ -19,13 +19,20 @@
             |  #{@member.phone[0..3] + '*****-' + @member.phone[10..13]}
         li
             strong Email:
-            |  #{@member.email}
+            - if @member.email.include?("@")
+                - atIndex = @member.email.index("@")
+                - primaryLetters = @member.email[0..2]
+                - lastLetters = @member.email[(atIndex - 2)..(atIndex - 1)]
+                - rest = @member.email[(atIndex + 1)..-1]
+                = " #{primaryLetters}*****#{lastLetters}@#{rest}"
+
         li
             strong Data e Hora:
             |  #{DateTime.parse(params[:timestamp]).strftime("%d/%m/%Y %H:%M:%S")}
 
-    h3 Números adquiridos do sorteio
+    
     .my-numbers-container  
+        h3 Números adquiridos do sorteio
         .my-numbers-box
             ul
                 - @numbers.each do |number|
