--- a/app/assets/stylesheets/frontend/application.sass
+++ b/app/assets/stylesheets/frontend/application.sass
@@ -49,7 +49,7 @@
     flex-direction: column
     p
         margin: 0
-        text-align: center
+        text-align: start
         width: 100%
 
 
