--- a/app/views/frontend/public/winners.html.slim
+++ b/app/views/frontend/public/winners.html.slim
@@ -19,9 +19,9 @@ section#agreement
                                         = image_tag winner.image_url, class: 'sorteio-img'
                                     .sorteio-content-winner
                                         h2 = winner.winner
-                                        p = 'Código do Sorteio: ' + Member.find_by(name: winner.winner).tickets[winner.id.to_s].to_s
+                                        p = 'Código do Sorteio: ' + winner.id.to_s
                                         p = 'Prêmio: ' + winner.event 
-                                        p = 'Numéro da Sorte: '
+                                        p = 'Numéro da Sorte: '+ winner.number_winner.to_s
                                     
                                     
                 - else 
